added working module links

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -9,12 +9,12 @@
                 </div>
             </div>
             <div class="right-side">
-                <button class="header-buttons">Home</button>
-                <button class="header-buttons">Modules</button>
-                <button class="header-buttons">AI Assistant</button>
-                <button class="header-buttons">About</button>
-                 <button class="get-started-button">Get Started</button>
-                <button class="header-buttons ">Get Started</button>
+                <button class="header-buttons" onclick="location.href='index.html'">Home</button>
+                <button class="header-buttons" onclick="location.href='explore.html'">Modules</button>
+                <button class="header-buttons" onclick="location.href='sorting.html'">AI Assistant</button>
+                <button class="header-buttons" onclick="location.href='about.html'">About</button>
+                <button class="get-started-button" onclick="location.href='modules.html'">Get Started</button>
+                <!-- <button class="header-buttons ">Get Started</button> -->
             </div>
             <div class="hamburger">
                 <button class="hamburger-button">
