feat: add logo, fix button paths, and add favicon
- Added site logo
- Fixed paths for all buttons (Start, Get Started, About, etc.)
- Added tab icon (favicon) for browser tab
- Minor fixes and added functionality to ensure navigation works correctly

--- a/components/footer.html
+++ b/components/footer.html
@@ -4,6 +4,7 @@
             <div class="algo-viz-footer-up">
                 <div class="algo-viz-footer-leftside">
                     <div class="Algoviz">
+                        <img src="images/HomePageImages/logo.png" alt="AlgoViz Logo" class="nav-logo">
                         <span class="algo">
                             Algo<span class="viz">Viz</span>
                         </span>
