--- a/components/navbar.html
+++ b/components/navbar.html
@@ -3,7 +3,8 @@
 
             <div class="left-side">
                 <div class="Algoviz">
-                    <span class="algo">
+                    <img src="images/HomePageImages/logo.png" alt="AlgoViz Logo" class="nav-logo">
+                    <span class="algo" onclick="location.href='index.html'">
                         Algo<span class="viz">Viz</span>
                     </span>
                 </div>
@@ -12,8 +13,8 @@
                 <button class="header-buttons" onclick="location.href='index.html'">Home</button>
                 <button class="header-buttons" onclick="location.href='explore.html'">Modules</button>
                 <button class="header-buttons" onclick="location.href='sorting.html'">AI Assistant</button>
-                <button class="header-buttons" onclick="location.href='about.html'">About</button>
-                <button class="get-started-button" onclick="location.href='modules.html'">Get Started</button>
+                <button class="header-buttons" onclick="scrollToFooter()">About</button>
+                <button class="get-started-button" onclick="scrollToExploreSection()">Get Started</button>
                 <!-- <button class="header-buttons ">Get Started</button> -->
             </div>
             <div class="hamburger">
