--- a/styles/footer.css
+++ b/styles/footer.css
@@ -12,6 +12,12 @@
 
 }
 
+.nav-logo {
+    height: 30px;
+    width: 34px;
+    margin-right: 1px;
+}
+
 @media (min-width: 640px) {
     .algo-viz-footer{
         padding-left: 1.5rem;
