--- a/styles/nav.css
+++ b/styles/nav.css
@@ -20,6 +20,7 @@
     margin-left: 176px;
 }
 .Algoviz{
+    display: flex;
     font-weight: 700;
     cursor: pointer;
 }
@@ -31,7 +32,11 @@
     font-size: 24px;
     font-weight:600;
 }
-
+.nav-logo {
+    height: 30px;
+    width: 34px;
+    margin-right: 1px;
+}
 
 .right-side{
     
