Fix footer responsiveness on smaller devices

--- a/components/footer.html
+++ b/components/footer.html
@@ -14,7 +14,7 @@
                     </p>
                 </div>
                 <div class="algo-viz-footer-rightside">
-                    <div>
+                    <div class="algo-viz-tag-box">
                         <h3 class="algo-viz-footer-heading">Modules</h3>
                         <ul>
                             <li class="module-list"><a class="algo-viz-footer-sub" href="">Sorting Visualizer</a></li>
@@ -23,7 +23,7 @@
                             <li class="module-list"><a class="algo-viz-footer-sub" href="">Stack & Queue Visualizer</a></li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="algo-viz-tag-box">
                         <h3 class="algo-viz-footer-heading">Resources</h3>
                         <ul>
                             <li class="module-list"><a class="algo-viz-footer-sub" href="">AI Assistant</a></li>
@@ -32,7 +32,7 @@
                             <li class="module-list"><a class="algo-viz-footer-sub" href="">Blog</a></li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="algo-viz-tag-box">
                         <h3 class="algo-viz-footer-heading">Company</h3>
                         <ul>
                             <li class="module-list"><a class="algo-viz-footer-sub" href="">About</a></li>
