--- a/components/footer.html
+++ b/components/footer.html
@@ -5,7 +5,7 @@
                 <div class="algo-viz-footer-leftside">
                     <div class="Algoviz">
                         <img src="images/HomePageImages/logo.png" alt="AlgoViz Logo" class="nav-logo">
-                        <span class="algo">
+                        <span class="algo" onclick="location.href='index.html'">
                             Algo<span class="viz">Viz</span>
                         </span>
                     </div>
@@ -17,9 +17,9 @@
                     <div class="algo-viz-tag-box">
                         <h3 class="algo-viz-footer-heading">Modules</h3>
                         <ul>
-                            <li class="module-list"><a class="algo-viz-footer-sub" href="">Sorting Visualizer</a></li>
-                            <li class="module-list"><a class="algo-viz-footer-sub" href="">Pathfinding Visualizer</a></li>
-                            <li class="module-list"><a class="algo-viz-footer-sub" href="">Tree & Graph Visualizer</a></li>
+                            <li class="module-list"><a class="algo-viz-footer-sub" href="sorting.html">Sorting Visualizer</a></li>
+                            <li class="module-list"><a class="algo-viz-footer-sub" href="pathfinding.html">Pathfinding Visualizer</a></li>
+                            <li class="module-list"><a class="algo-viz-footer-sub" href="treeTraversal.html">Tree & Graph Visualizer</a></li>
                             <li class="module-list"><a class="algo-viz-footer-sub" href="">Stack & Queue Visualizer</a></li>
                         </ul>
                     </div>
